crates/board-tui/tests/snapshots/snapshots__form_scrollbar_overflowing_80x24.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: output
---
" ◈ herdr-board ● 1 running     [ Global ▾ ]      [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ Edit card  ·  f: fullscreen  ·  Tab: field · Enter: save · Esc: cancel ──────┐"
"│┌ Task ─────────────────────────────────────────────────────────────────────┐▲│"
"││▌ title                                                                    │█│"
"││▏Add retry to MELI scraper                                                 │█│"
"││  description (base prompt) [ $EDITOR ]                                    │█│"
"││Add exponential backoff to the MELI scraper HTTP client.                   │█│"
"││                                                                           │█│"
"││                                                                           │││"
"││                                                                           │││"
"│└───────────────────────────────────────────────────────────────────────────┘││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ▼│"
"│               [ Save ]                              [ Cancel ]               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
