crates/board-tui/tests/snapshots/snapshots__help_overlay.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: output
---
"┌ Help — all keybindings (any key to close) ───────────────────────────────────┐"
"│  ←/→ h/l    focus column                 a          archive / restore card   │"
"│  ↑/↓ k/j    focus card                   c          add comment              │"
"│  b          switch board                 d          delete focused comment   │"
"│  n          new card                     h          comment history          │"
"│  N          new column                   Tab        focus comments / runs    │"
"│  e          edit card                    ↑/↓ k/j    select comment / run     │"
"│  E          edit focused column          f / click  toggle popup / fullscreen│"
"│  a          archive / restore card       o          jump to selected run pane│"
"│  v          cycle active/all/archived    x          cancel run               │"
"│  d          delete card                  r          retry run                │"
"│  D          delete/move column cards    forms                                │"
"│  m          move card (board→column)     Tab        next field               │"
"│  M          move focused column          Shift+Tab  previous field           │"
"│  H / L      shove card left / right      ←/→ Space  cycle a picker field     │"
"│  Enter      card detail                  Ctrl+E     edit textarea in $EDITOR │"
"│  T          apply template (empty)       Enter      submit                   │"
"│  r          refresh board                Esc        cancel                   │"
"│  ?          this help                   mouse                                │"
"│  q / Esc    back / quit                  click      focus card/column        │"
"│ card detail                              dbl-click  open card detail         │"
"│  Enter      confirm done (awaiting)      drag       move card/reorder column │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"? help                                                                          "
