crates/board-tui/tests/snapshots/snapshots__move_after.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 80, 24)"
---
" ◈ herdr-board ● 1 running [ Glo… ▾ ][ main ▾ ]  [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 0 ──────┐┌ PLAN · AUTO · 2 ────────┐┌ EXECUTE · AUTO · 2 ────┐"
"│                         ││┌───────────────────────┐││┌──────────────────────┐│"
"│                         │││#2 Add retry to MELI s…││││#3 Fix flaky test     ││"
"│                         │││▶ running · 2m0s       ││││⧗ queued              ││"
"│                         │││claude · eff: high     ││││claude                ││"
"│                         ││└───────────────────────┘││└──────────────────────┘│"
"│                         ││┌───────────────────────┐││┌──────────────────────┐│"
"│                         │││#1 Update docs         ││││#4 Investigate crash  ││"
"│                         │││· idle                 ││││⏸ blocked             ││"
"│                         │││claude                 ││││claude                ││"
"│                         ││└───────────────────────┘││└──────────────────────┘│"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"└─────────────────────────┘└─────────────────────────┘└────────────────────────┘"
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
