crates/board-tui/tests/snapshots/snapshots__move_blocked_toast.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 80, 24)"
---
" ◈ herdr-board                                                      ● 1 running "
"          [ Board: Global ▾ ]           Visible: [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 1 ──────┐┌ PLAN · AUTO · 1 ────────┐┌ EXECUTE · AUTO · 2 ────┐"
"│┌───────────────────────┐││┌───────────────────────┐││┌──────────────────────┐│"
"││#1 Update docs         ││││#2 Add retry to MELI s…││││#3 Fix flaky test     ││"
"││· idle                 ││││▶ running · 2m0s       ││││⧗ queued              ││"
"││claude                 ││││claude · eff: high     ││││claude                ││"
"│└───────────────────────┘││└───────────────────────┘││└──────────────────────┘│"
"│                         ││                         ││┌──────────────────────┐│"
"│                         ││                         │││#4 Investigate crash  ││"
"│                         ││                         │││⏸ blocked             ││"
"│                         ││                         │││claude                ││"
"│                         ││                         ││└──────────────────────┘│"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"└─────────────────────────┘└─────────────────────────┘└────────────────────────┘"
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
" boardd error 3: invalid state: cannot move: session does not resolve: herdr se…"
