crates/board-tui/tests/snapshots/snapshots__move_column_committed.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 120, 35)"
---
" ◈ herdr-board                                                                                              ● 1 running "
"[ Board: Global ▾ ]                                                                        [Active] [All] [Archived]    "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 1 ─────────┐┌ EXECUTE · AUTO · 2 ────────┐┌ PLAN · AUTO · 1 ───────────┐┌ REVIEW · AUTO · 2 ─────────┐"
"│┌──────────────────────────┐││┌──────────────────────────┐││┌──────────────────────────┐││┌──────────────────────────┐│"
"││· #1 Update docs          ││││⧗ #3 Fix flaky test       ││││▶ #2 Add retry to MELI sc…││││✗ #5 Refactor auth module ││"
"││· idle                    ││││⧗ queued                  ││││▶ running · 2m0s          ││││✗ failed                  ││"
"││claude     [Edit] [Delete]││││claude     [Edit] [Delete]││││claude · … [Edit] [Delete]││││claude · … [Edit] [Delete]││"
"│└──────────────────────────┘││└──────────────────────────┘││└──────────────────────────┘││└──────────────────────────┘│"
"│                            ││┌──────────────────────────┐││                            ││┌──────────────────────────┐│"
"│                            │││⏸ #4 Investigate crash    │││                            │││? #6 Tune retry backoff   ││"
"│                            │││⏸ blocked                 │││                            │││? awaiting                ││"
"│                            │││claude     [Edit] [Delete]│││                            │││claude     [Edit] [Delete]││"
"│                            ││└──────────────────────────┘││                            ││└──────────────────────────┘│"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘"
"  [+ Card]    [ Open card ]  [Archive]   [+ Column]    [Edit col]    [Del col]   [Move col]   [ Template ]  [ ? Help ]  "
"drag card to move · double-click to open                                                                                "
