crates/board-tui/tests/snapshots/snapshots__move_column_mini_mode.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: in_mode
---
"┌ TODO · MANUAL · 1 ─────────┐┌ EXECUTE · AUTO · 2 ────────┐┌ PLAN · AUTO · 1 ───────────┐┌ REVIEW · AUTO · 2 ─────────┐"
"│┌──────────────────────────┐││┌──────────────────────────┐││┌──────────────────────────┐││┌──────────────────────────┐│"
"││· #1 Update docs──────────││││⧗ #3 Fix flaky test───────││││▶ #2 Add retry to MELI sc…││││✗ #5 Refactor auth module─││"
"││· idle                    ││││⧗ queued                  ││││▶ running · 2m0s          ││││✗ failed                  ││"
"││claude     [Edit] [Delete]││││claude     [Edit] [Delete]││││claude · … [Edit] [Delete]││││claude · … [Edit] [Delete]││"
"│└──────────────────────────┘││└──────────────────────────┘││└──────────────────────────┘││└──────────────────────────┘│"
"│                            ││┌──────────────────────────┐││                            ││┌──────────────────────────┐│"
"│                            │││⏸ #4 Investigate crash    │││                            │││? #6 Tune retry backoff   ││"
"│                            │││⏸ blocked                 │││                            │││? awaiting                ││"
"│                            │││claude     [Edit] [Delete]│││                            │││claude     [Edit] [Delete]││"
"│                            ││└──────────────────────────┘││                            ││└──────────────────────────┘│"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││┌ Move column ───────────────────────────────────[Close]─┐││                            │"
"│                            │││[← Left]             reorder Plan              [Right →]│││                            │"
"│                            │││                                                        │││                            │"
"│                            │││        [ [Confirm] ]               [ [Cancel] ]        │││                            │"
"│                            ││└────────────────────────────────────────────────────────┘││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘"
"? help                                                                                                                  "
