crates/board-tui/tests/snapshots/snapshots__move_form.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 80, 24)"
---
" ◈ herdr-board ● 1 running [ Glo… ▾ ][ main ▾ ]  [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 1 ──────┐┌ PLAN · AUTO · 1 ────────┐┌ EXECUTE · AUTO · 2 ────┐"
"│┌───────────────────────┐││┌───────────────────────┐││┌──────────────────────┐│"
"││#1 Update docs         ││││#2 Add retry to MELI s…││││#3 Fix flaky test     ││"
"┌ Move card  ·  f: fullscreen  ·  Tab: field · Enter: save · Esc: cancel ──────┐"
"│┌ Move ──────────────────────────────────────────────────────────────────────┐│"
"││  project                                                                   ││"
"││[ ‹ ]  Global  [ › ]                                                        ││"
"││  board                                                                     ││"
"││[ ‹ ]  main  [ › ]                                                          ││"
"││▌ column                                                                    ││"
"││[ ‹ ]  Todo  [ › ]                                                          ││"
"││  position (optional)                                                       ││"
"││                                                                            ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│               [ Save ]                              [ Cancel ]               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"└─────────────────────────┘└─────────────────────────┘└────────────────────────┘"
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
