crates/board-tui/tests/snapshots/snapshots__move_pick_column.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 80, 24)"
---
"┌ Todo · 1 · manual ──────┐┌ Plan · 1 · auto ────────┐┌ Execute · 2 · auto ────┐"
"│▌ Update docs            ││▌ Add retry to MELI scra…││▌ Fix flaky test        │"
"│  · idle · claude        ││  ▶ running · 2m0s · clau││  ⧗ queued · claude     │"
"│                         ││                         ││                        │"
"│                         ││                         ││▌ Investigate crash     │"
"│                         ││                         ││  ⏸ blocked · claude    │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│    ┌ Move card to which column? (Global)  · b = other board (Enter/Esc) ┐    │"
"│    │ Plan                                                               │    │"
"│    │ Execute                                                            │    │"
"│    │ Review                                                             │    │"
"│    │ Human Review                                                       │    │"
"│    │ Done                                                               │    │"
"│    └────────────────────────────────────────────────────────────────────┘    │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"└─────────────────────────┘└─────────────────────────┘└────────────────────────┘"
"? help                                                                          "
